kubernetes/mail_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev:2.1.0
          ports:
            - containerPort: 1080
            - containerPort: 1025
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
