kubernetes/jen_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-main
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: jenkins-main
