kubernetes/mail_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: maildev
spec:
  ports:
    - port: 1080
      targetPort: 1080
  selector:
    app: maildev
