kubernetes/jen_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
    - host: jenkins.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-main
                port:
                  number: 8080
    - host: maildev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maildev
                port:
                  number: 1080
